<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARVORITMO</string>
    <string name="app_start">	Começa	</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"> ARVORITMO</string>
	<string name="select_sample">Carrega desde disco</string>
	<string name="botao_select_sample">Troca sons</string>
	<string name="botao_save_sample">Salva</string>
	<string name="text_hit_save_sample">Nome</string>
	<string name="save_rewrite_info">Se o nome do arquivo já existe, ele vai se reescrever</string>
	
	<string name="mais_info"> 	+ INFO 	</string>
	<string name="infoArvortimo">Ideia original, programação e design de Arvoritmo:
Javier Cruz | www.javiercruz.cl </string>
	<string name="infoMusicaMovel">Este aplicativo tem sido desenvolvido dentro do projeto Música Móvel</string>
	<string name="botaoIrWeb"> ir para o site </string>
</resources>
